# digit-ocr-app

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/api/: main.py
app/frontend/: index.html
app/model/: predict.py  predict_custom.py  train.py
